--- a/inventory/example.yaml
+++ b/inventory/example.yaml
@@ -37,6 +37,11 @@ s3:
     192.168.150.16:
 
 lb:
+  vars:
+    nginx:
+      status_socket: "127.0.0.1:88"
+      status_allow_from:
+        - "127.0.0.1"
   hosts:
     192.168.150.21:
     192.168.150.22:
