--- a/roles/configure-lb/tasks/main.yaml
+++ b/roles/configure-lb/tasks/main.yaml
@@ -2,14 +2,13 @@
 
 - ping:
 
-# - name: generate keepalived config
-#   template:
-#     dest: /etc/keepalived/keepalived.conf
-#     src: keepalived.conf.j2
-#     owner: root
-#     group: root
-#     mode: '0640'
-
+- name: generate keepalived config
+  template:
+    dest: /etc/keepalived/keepalived.conf
+    src: keepalived.conf.j2
+    owner: root
+    group: root
+    mode: '0640'
 
 
 
