--- a/roles/setup-lb/tasks/main.yaml
+++ b/roles/setup-lb/tasks/main.yaml
@@ -11,3 +11,13 @@
     state: present
     update_cache: yes
     install_recommends: no
+
+
+- name: enable non local bind
+  sysctl:
+    name: net.ipv4.ip_nonlocal_bind
+    value: '1'
+    sysctl_set: yes
+    sysctl_file: /etc/sysctl.d/98-keepalived.conf
+    state: present
+    reload: yes
